fixing bad line-wrapping on browse page

--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -2172,7 +2172,6 @@ ul.collections li a .items-in-collection strong{
 	font-size:21px;
 	border-bottom:1px solid #ddd;
 	margin:0 -10px;
-	background:rgba(0,0,0,0.1);
 }
 .secondary-browse-facets .four.columns{
 	min-height:320px;
